v2.0/base/aimp-cloud/aimp-data/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: aimp-data
    logging: "true"
  name: aimp-data
  namespace: aimp-cloud
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: aimp-data
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      creationTimestamp: null
      labels:
        app: aimp-data
        logging: "true"
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: aimprole.shaiic.com
                operator: In
                values:
                - controller
      containers:
      - args:
        - -javaagent:/elastic/apm/agent/elastic-apm-agent.jar
        - -server
        - -XX:+UseContainerSupport
        - -XX:MaxRAMPercentage=80.0
        - -XX:+UseCompressedOops
        - -XX:+UseCompressedClassPointers
        - -XX:+SegmentedCodeCache
        - -verbose:gc
        - -XX:+PrintCommandLineFlags
        - -XX:+ExplicitGCInvokesConcurrent
        - -Djava.security.egd=file:/dev/./urandom
        - -Xlog:gc*,safepoint:/log/aimp-data.gc.log:time,uptime:filecount=100,filesize=50M
        - -jar
        - /deployments/app.jar
        - --spring.profiles.active=uat
        - --spring.application.name=aimp-data
        command:
        - java
        image: cxyacr.azurecr.cn/aimp-cloud/aimp-data:275
        imagePullPolicy: IfNotPresent
        lifecycle:
          preStop:
            exec:
              command:
              - /bin/sh
              - -c
              - /bin/sleep 30
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /actuator/health/liveness
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 60
          periodSeconds: 15
          successThreshold: 1
          timeoutSeconds: 1
        name: aimp-data
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /actuator/health/readiness
            port: 8080
            scheme: HTTP
          periodSeconds: 15
          successThreshold: 1
          timeoutSeconds: 1
        resources:
          limits:
            cpu: "2"
            memory: 4Gi
          requests:
            cpu: 100m
            memory: 1Gi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /log
          name: ms-log
        - mountPath: /elastic/apm/agent
          name: elastic-apm-agent
      dnsPolicy: ClusterFirstWithHostNet
      imagePullSecrets:
      - name: cxycred
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: { }
      serviceAccount: aimp-cloud
      serviceAccountName: aimp-cloud
      terminationGracePeriodSeconds: 30
      volumes:
      - hostPath:
          path: /data/logs/ms/aimp-data
          type: ""
        name: ms-log
      - emptyDir: { }
        name: elastic-apm-agent
